--- a/index.html
+++ b/index.html
@@ -4,203 +4,54 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <meta name="theme-color" content="#0f0f0f">
-<title>Escáner Código de Barras</title>
+<title>Escáner Code 128</title>
 
 <style>
 * { margin: 0; padding: 0; box-sizing: border-box; }
 
 body {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-    background: #0a0a0a;
-    color: #fff;
-    overflow: hidden;
+  background: #0a0a0a;
+  color: #fff;
+  font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+  overflow: hidden;
 }
 
 #container {
-    width: 100vw;
-    height: 100vh;
-    position: relative;
+  width: 100vw;
+  height: 100vh;
+  position: relative;
 }
 
 video {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
-.start-screen {
-    position: fixed;
-    inset: 0;
-    background: #0a0a0a;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    z-index: 10;
-    text-align: center;
-    padding: 30px;
+.start {
+  position: fixed;
+  inset: 0;
+  background: #0a0a0a;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 10;
 }
 
-.start-btn {
-    margin-top: 20px;
-    padding: 16px 28px;
-    border-radius: 14px;
-    border: none;
-    font-size: 18px;
-    font-weight: 700;
-    background: #00ff88;
-    color: #000;
+.start button {
+  margin-top: 20px;
+  padding: 16px 30px;
+  border-radius: 14px;
+  border: none;
+  font-size: 18px;
+  font-weight: bold;
+  background: #00ff88;
+  color: #000;
 }
 
-.header {
-    position: absolute;
-    top: 20px;
-    width: 100%;
-    text-align: center;
-    font-size: 18px;
-    z-index: 3;
-}
-
-.scan-area {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 320px;
-    height: 140px;
-    transform: translate(-50%, -50%);
-    border: 2px solid rgba(255,255,255,0.6);
-    border-radius: 14px;
-    z-index: 3;
-}
-
-.status {
-    position: absolute;
-    bottom: 30px;
-    width: 100%;
-    text-align: center;
-    font-size: 16px;
-    z-index: 3;
-}
-
-.status.ok {
-    color: #00ff88;
-    font-weight: bold;
-}
-</style>
-</head>
-
-<body>
-<div id="container">
-
-    <div class="start-screen" id="startScreen">
-        <h2>Escáner de Código de Barras</h2>
-        <p>Code 128 / EAN</p>
-        <button class="start-btn" onclick="startScanner()">Iniciar cámara</button>
-        <div id="errorMsg" style="color:#ff5555;margin-top:15px;"></div>
-    </div>
-
-    <div class="header">Escaneando…</div>
-
-    <video id="video" autoplay playsinline muted></video>
-
-    <div class="scan-area"></div>
-
-    <div class="status" id="statusText">Esperando cámara…</div>
-</div>
-
-<script>
-/* ================== ZXING ================== */
-const zxingScript = document.createElement('script');
-zxingScript.src = 'https://unpkg.com/@zxing/library@0.20.0/umd/index.min.js';
-document.head.appendChild(zxingScript);
-
-let reader = null;
-let stream = null;
-let scanning = false;
-let lastCode = null;
-let audioCtx = null;
-
-zxingScript.onload = () => {
-    const hints = new Map();
-    hints.set(ZXing.DecodeHintType.POSSIBLE_FORMATS, [
-        ZXing.BarcodeFormat.CODE_128,
-        ZXing.BarcodeFormat.EAN_13,
-        ZXing.BarcodeFormat.EAN_8
-    ]);
-
-    reader = new ZXing.BrowserMultiFormatReader(hints, 500);
-};
-
-/* ================== AUDIO BEEP ================== */
-function beep() {
-    if (!audioCtx) audioCtx = new (window.AudioContext || window.webkitAudioContext)();
-    const osc = audioCtx.createOscillator();
-    const gain = audioCtx.createGain();
-
-    osc.type = 'square';
-    osc.frequency.value = 900;
-    gain.gain.value = 0.15;
-
-    osc.connect(gain);
-    gain.connect(audioCtx.destination);
-
-    osc.start();
-    osc.stop(audioCtx.currentTime + 0.15);
-}
-
-/* ================== START ================== */
-async function startScanner() {
-    try {
-        const constraints = {
-            video: {
-                facingMode: 'environment',
-                focusMode: 'continuous'
-            }
-        };
-
-        stream = await navigator.mediaDevices.getUserMedia(constraints);
-        const video = document.getElementById('video');
-        video.srcObject = stream;
-        await video.play();
-
-        document.getElementById('startScreen').style.display = 'none';
-        document.getElementById('statusText').textContent = 'Buscando código…';
-
-        startDetection();
-    } catch {
-        document.getElementById('errorMsg').textContent = 'No se pudo acceder a la cámara';
-    }
-}
-
-/* ================== DETECCIÓN ================== */
-function startDetection() {
-    if (!reader) return;
-
-    scanning = true;
-    reader.decodeFromVideoElement(document.getElementById('video'), (result) => {
-        if (!scanning || !result) return;
-
-        const code = result.getText();
-        if (code === lastCode) return;
-
-        lastCode = code;
-        scanning = false;
-
-        document.getElementById('statusText').textContent = '✔ Código leído: ' + code;
-        document.getElementById('statusText').classList.add('ok');
-
-        if (navigator.vibrate) navigator.vibrate([200, 100, 200]);
-        beep();
-
-        setTimeout(() => {
-            document.getElementById('statusText').textContent = 'Buscando código…';
-            document.getElementById('statusText').classList.remove('ok');
-            lastCode = null;
-            scanning = true;
-        }, 2500);
-    });
-}
-</script>
-
-</body>
-</html>
+.frame {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 3
